绝对值符号bug修正

--- a/pages/C02计算机组成原理.md
+++ b/pages/C02计算机组成原理.md
@@ -833,7 +833,7 @@
 |:--------------------------------- |
 | $Cache行数=Cache数据区大小÷主存块大小$        |
 | $Cache行内地址数量=主存块大小÷存储字长$          |
-| $Cache数据区地址组成=行号\|行内地址$           |
+| $Cache数据区地址组成=行号\vert 行内地址$       |
 | $Cache行大小=有效位+算法位+脏位+主存标记位+主存块大小$ |
 
 | 大小类别     | 区分             |
