--- a/pages/C04计算机网络.md
+++ b/pages/C04计算机网络.md
@@ -496,10 +496,10 @@
 | 术语          | 说明                                            |
 |:-----------:|:---------------------------------------------:|
 | 网络地址转换NAT   | 局域网内私有IP与公网IP的转换，并记录在NAT表中，以能让局域网内的私有IP进行网络访问 |
-| 子网划分        | 无分类编址的前身，$网络号\|主机号高位网络号\|主机号$                 |
+| 子网划分        | 无分类编址的前身，$网络号\vert 主机号高位网络号\vert 主机号$         |
 | 子网掩码        | 子网划分后，以表示网络号的位数                               |
 | 默认网关        | 本网路由器地址，默认网关输入正确可以访问路由器外部网路                   |
-| 无分类编址CIDR   | $网络前缀号\|主机号/网络前缀号数量$                          |
+| 无分类编址CIDR   | $网络前缀号\vert 主机号/网络前缀号数量$                      |
 | 构成超网、路由聚合技术 | 如果多个子网下一跳都是个同路由器，求多个子网的最大公网络前缀号，作为下个路由器的超网    |
 
 ---
