--- a/pages/M01线性代数.md
+++ b/pages/M01线性代数.md
@@ -2,7 +2,7 @@
 
 ## 行列式
 
-        **概念**：行数列数必须相等，**一个行列式可以求出一个值**，行列式表示时用$|a|$包裹其内部元素，来源于克拉姆法则的方程求解。
+        **概念**：行数列数必须相等，**一个行列式可以求出一个值**，行列式表示时用$\vert a\vert$包裹其内部元素，来源于克拉姆法则的方程求解。
 
 ### 行列式展开求值
 
@@ -241,13 +241,13 @@
 
 ### 矩阵行列式
 
-        **概念**：$A$是方阵，$...A$表示解构元素，去掉矩阵的包裹$()$，用$||$包裹就是该方阵的矩阵行列式$|...A|$，简记$|A|$
+        **概念**：$A$是方阵，$...A$表示解构元素，去掉矩阵的包裹$()$，用$\vert\vert$包裹就是该方阵的矩阵行列式$\vert...A\vert$，简记$\vert A\vert$
 
-| 性质                   | 原因              |
-|:--------------------:|:---------------:|
-| $\|A^T\|＝\|A\|$      | 行列式转置值不变        |
-| $\|kA\|＝k^n\|A\|$    | 行列式的数乘和矩阵的数乘不一样 |
-| $\|AB\|＝\|A\|×\|B\|$ | 矩阵的乘法和行列式乘法一样   |
+| 性质                                        | 原因              |
+|:-----------------------------------------:|:---------------:|
+| $\vert A^T\vert＝\vert A\vert$             | 行列式转置值不变        |
+| $\vert kA\vert＝k^n\vert A\vert$           | 行列式的数乘和矩阵的数乘不一样 |
+| $\vert AB\vert＝\vert A\vert×\vert B\vert$ | 矩阵的乘法和行列式乘法一样   |
 
 ---
 
@@ -255,13 +255,13 @@
 
         **概念**：$A$是方阵，求其矩阵行列式所有元素的代数余子式，按行求的按列放，记$A^*$
 
-| 性质                         | 原因                            |
-|:--------------------------:|:-----------------------------:|
-| $AA^*=A^*A=\|A\|E$         | 由异乘为0推导                       |
-| $\|A^*\|＝\|A\|^{n-1}$      | 因为$\|AA^*\|＝\|A\|×\|A^*\|＝\|  |
-| $A^{-1}＝\|A\|^{-1}A^*$     | **伴随矩阵法求逆矩阵**，因为$AA^*=\|A\|E$ |
-| $(A^*)^{-1}＝\|A\|^{-1}A^*$ | 因为$AA^*=\|A\|E$               |
-| 矩阵A只有一行一列，$A^*＝E$          | \                             |
+| 性质                                  | 原因                                                                         |
+|:-----------------------------------:|:--------------------------------------------------------------------------:|
+| $AA^*=A^*A=\vert A\vert E$          | 由异乘为0推导                                                                    |
+| $\vert A^*\vert＝\vert A\vert^{n-1}$ | 因为$\vert AA^*\vert＝\vert A\vert×\vert A^*\vert＝\vert A\vert^n\vert E\vert$ |
+| $A^{-1}＝\vert A\vert ^{-1}A^*$      | **伴随矩阵法求逆矩阵**，因为$AA^*=\vert A\vert E$                                      |
+| $(A^*)^{-1}＝\vert A\vert ^{-1}A^*$  | 因为$AA^*=\vert A\vert E$                                                    |
+| 矩阵A只有一行一列，$A^*＝E$                   | \                                                                          |
 
 ---
 
@@ -269,15 +269,15 @@
 
         **概念**：$AB$都是方阵，$AB=BA=E$，则$A、B$互为逆矩阵，记$B=A^{-1}$，$A=B^{-1}$。
 
-| 性质                             | 公式说明                                            |
-|:------------------------------:|:-----------------------------------------------:|
-| 未必所有方阵都可逆，逆矩阵的充分必要条件是$\|A\|≠0$ | $\|A\|≠0$，又叫非奇异，非退化，满秩，线性无关，特征值无0，**求逆矩阵前必须判断** |
-| 若可逆，是唯一                        | \                                               |
-| 只需证明1个                         | 若$AB=E，则BA=E$                                   |
-| 逆矩阵的逆矩阵是本身                     | $A$可逆，$(A^{-1})^{-1}＝A$                         |
-| **数乘k与逆相关**                    | $A$可逆，$(kA)^{-1}＝k^{-1}A^{-1}$                  |
-| **逆分配结合**                      | $A、B、AB$可逆，$(AB)^{-1}=B^{-1}A^{-1}$             |
-| **转置求逆无顺序**                    | $A$可逆，$(A^{-1})^T＝(A^T)^{-1}$                   |
+| 性质                                    | 公式说明                                                   |
+|:-------------------------------------:|:------------------------------------------------------:|
+| 未必所有方阵都可逆，逆矩阵的充分必要条件是$\vert A\vert≠0$ | $\vert A\vert≠0$，又叫非奇异，非退化，满秩，线性无关，特征值无0，**求逆矩阵前必须判断** |
+| 若可逆，是唯一                               | \                                                      |
+| 只需证明1个                                | 若$AB=E，则BA=E$                                          |
+| 逆矩阵的逆矩阵是本身                            | $A$可逆，$(A^{-1})^{-1}＝A$                                |
+| **数乘k与逆相关**                           | $A$可逆，$(kA)^{-1}＝k^{-1}A^{-1}$                         |
+| **逆分配结合**                             | $A、B、AB$可逆，$(AB)^{-1}=B^{-1}A^{-1}$                    |
+| **转置求逆无顺序**                           | $A$可逆，$(A^{-1})^T＝(A^T)^{-1}$                          |
 
 + **求法：伴随矩阵法、初等变化法**
 
@@ -363,9 +363,9 @@
 \right .
   $$
 
-        **初等变换法**求逆矩阵过程$（A|E）->...->（E|A^{-1}）$：
+        **初等变换法**求逆矩阵过程$（A\vert E）->...->（E\vert A^{-1}）$：
 
-1. 写出$(A|E)$，先将有1的行提到顶行，分数少，好计算
+1. 写出$(A\vert E)$，先将有1的行提到顶行，分数少，好计算
 
 2. **必须只做行变换**，从上往下，依次处理第1列,第2列...第n列，消出$A$的下三角全0，$E$也跟着变化
 
@@ -383,9 +383,9 @@
 
         **方阵$A$的特征值$\lambda$求法**：
 
-1. $A\alpha=\lambda\alpha，(\lambda E-A)\alpha=0，又因\alpha≠O，所以|\lambda E-A|=0$
+1. $A\alpha=\lambda\alpha，(\lambda E-A)\alpha=0，又因\alpha≠O，所以\vert\lambda E-A\vert=0$
 
-2. 求解$|\lambda E-A|=0$，**特征值解的个数为阶数个**，尽可能用行列式数乘提含$\lambda$的公因子
+2. 求解$\vert\lambda E-A\vert=0$，**特征值解的个数为阶数个**，尽可能用行列式数乘提含$\lambda$的公因子
 
 <br>
 
@@ -404,9 +404,9 @@
 | 零方阵的特征值为0，特征向量为所有单位向量                               |
 | 单位阵的特征值为1，特征向量为所有单位向量                               |
 | 方阵$A$和$A^T$有相同的特征值，但特征向量不一定相同                       |
-| 方阵$A$的每行且每列元素绝对值之和都＜1，那么方阵A的$\|\lambda\|＜1$         |
+| 方阵$A$的每行且每列元素绝对值之和都＜1，那么方阵A的$\vert \lambda\vert＜1$  |
 | $方阵A所有特征值的和=A主对角线的和=矩阵的迹tr(A)$                      |
-| $方阵A所有特征值的乘积=\|A\|$                                 |
+| $方阵A所有特征值的乘积=\vert A\vert$                          |
 | 方阵$A$可逆<=>$A$的特征值无0                                 |
 | 方阵$A$由各互异的特征值对应的1个特征向量，组合的向量组线性无关                   |
 | 方阵$A$由各互异的特征值对应的多个无关特征向量，组合的向量组线性无关                 |
@@ -416,19 +416,19 @@
 | 若$\lambda$是方阵$A$的特征值，那么$\lambda^k$也是$A^k$的特征值       |
 | 若$\lambda$是方阵$A$的特征值，那么$\lambda+k$也是$A+kE$的特征值      |
 | 若$\lambda$是方阵$A$的特征值，那么$\lambda^{-1}$也是$A^{-1}$的特征值 |
-| 若$\|a＋bA\|＝0$，则$\lambda＝-a/b$                       |
+| 若$\vert a＋bA\vert＝0$，则$\lambda＝-a/b$                |
 
-#### 矩阵相似
+#### 矩阵相似~~~~
 
         **概念**：$A、B$为方阵，存在$n$阶可逆矩阵$P$，$P^{-1}AP＝B$，则$A$相似于$B$，记$A$~$B$
 
-| 性质                                                          |
-|:-----------------------------------------------------------:|
-| 拥有反身性、对称性、连续性                                               |
-| 若$A$~$B$，则$A$、$B$有相同的特征值，$\|A\|＝\|B\|$，$tr(A)＝tr(B)$，逆命题不成立 |
-| 若$A$~$B$，则$A、B$同时可逆、同时不可逆，若同时可逆，则$A^{-1}$~$B^{-1}$          |
-| 若$A$~$B$，则$A^k$~$B^k$                                       |
-| 若$A$~$\wedge$<＝>  A有$n$个线性无关的特征向量                           |
+| 性质                                                                        |
+|:-------------------------------------------------------------------------:|
+| 拥有反身性、对称性、连续性                                                             |
+| 若$A$~$B$，则$A$、$B$有相同的特征值，$\vert A\vert＝\vert B\vert$，$tr(A)＝tr(B)$，逆命题不成立 |
+| 若$A$~$B$，则$A、B$同时可逆、同时不可逆，若同时可逆，则$A^{-1}$~$B^{-1}$                        |
+| 若$A$~$B$，则$A^k$~$B^k$                                                     |
+| 若$A$~$\wedge$<＝>  A有$n$个线性无关的特征向量                                         |
 
 ---
 
@@ -438,7 +438,7 @@
 
 | 性质                                                              |
 |:---------------------------------------------------------------:|
-| 若$A$是正交矩阵，则$\|A\|＝1$或$-1$                                       |
+| 若$A$是正交矩阵，则$\vert A\vert＝1$或$-1$                                |
 | 若$A$是正交矩阵，则$A^{-1}＝A^T$，$A^T$正交，$A^-1$正交                        |
 | 若$A、B$是正交矩阵，则$AB$也是正交矩阵                                         |
 | 若$A$是正交矩阵，$\alpha，\beta$为列向量，则$(A\alpha，A\beta)＝(\alpha，\beta)$ |
@@ -582,8 +582,8 @@ $$
 | 术语    | 说明                                         |
 |:-----:|:------------------------------------------:|
 | 向量内积  | 同方向向量的向量乘法，记$(\alpha,\beta)=\alpha\beta^T$ |
-| 向量长度  | $\|                                        |
-| 向量单位化 | 向量长度为1，$\frac{1}{\|                        |
+| 向量长度  | $\|\alpha\|$                               |
+| 向量单位化 | 使向量长度为1，$×\frac{1}{\|\alpha\|}$            |
 | 正交向量组 | 不存在零向量，向量组内两两正交                            |
 
         **施密特正交化**：将线性无关的向量组，转为正交向量组
@@ -780,11 +780,11 @@ $$
 
 ### 主术语
 
-| 主术语 | 形式  | 意义    | 表示      |
-|:---:|:---:|:-----:|:-------:|
-| 行列式 | 数表  | 对应一个值 | $\|a\|$ |
-| 矩阵  | 数表  | 关系表   | $(a)$   |
-| 向量  | 数列  | 射线    | $(a)$   |
+| 主术语 | 形式  | 意义    | 表示             |
+|:---:|:---:|:-----:|:--------------:|
+| 行列式 | 数表  | 对应一个值 | $\vert a\vert$ |
+| 矩阵  | 数表  | 关系表   | $(a)$          |
+| 向量  | 数列  | 射线    | $(a)$          |
 
 ---
 
@@ -803,11 +803,11 @@ $$
 
 ### 定义矩阵
 
-| 定义矩阵 | 前提    | 定义                  |
-|:----:|:-----:|:-------------------:|
-| 伴随矩阵 | 方阵$A$ | $A^*A=AA^*=\|A\|E$  |
-| 可逆矩阵 | 方阵$A$ | $A^{-1}A=AA^{-1}=E$ |
-| 正交矩阵 | 方阵$A$ | $A^TA=AA^{T}=E$     |
+| 定义矩阵 | 前提    | 定义                         |
+|:----:|:-----:|:--------------------------:|
+| 伴随矩阵 | 方阵$A$ | $A^*A=AA^*=\vert A\vert E$ |
+| 可逆矩阵 | 方阵$A$ | $A^{-1}A=AA^{-1}=E$        |
+| 正交矩阵 | 方阵$A$ | $A^TA=AA^{T}=E$            |
 
 + 都具有交换律。
 
