--- a/pages/M02微积分一.md
+++ b/pages/M02微积分一.md
@@ -26,10 +26,10 @@
 | 分配结合律    | $A\cup (B\cap C)=(A\cup B)\cap (A\cup C)$         |
 | 反演律、摩尔根律 | $\overline {A\cup B}=\overline A\cap \overline B$ |
 
-| 集合表示 | 说明                           |
-|:----:|:----------------------------:|
-| 列举法  | 列出所有元素                       |
-| 描述法  | 用数学公式表达，例$\{a\|0<a<8,a是整数\}$ |
+| 集合表示 | 说明                              |
+|:----:|:-------------------------------:|
+| 列举法  | 列出所有元素                          |
+| 描述法  | 用数学公式表达，例$\{a\vert0<a<8,a是整数\}$ |
 
 ---
 
@@ -79,14 +79,14 @@
 
         **概念**：
 
-| x趋于       | f(x)趋于 | 任给           | 存在         | 使得                                          |
-|:---------:|:------:|:------------:|:----------:|:-------------------------------------------:|
-| $＋\infty$ | a      | $\epsilon>0$ | $X>0$      | $x>X$时，$\|f(x)-a\|<\epsilon$                |
-| $-\infty$ | a      | $\epsilon>0$ | $X>0$      | $x<-X$时，$\|f(x)-a\|<\epsilon$               |
-| $\infty$  | a      | $\epsilon>0$ | $X>0$      | $x>\|X\|$时，$\|f(x)-a\|<\epsilon$            |
-| $x_0$     | a      | $\epsilon>0$ | $\delta>0$ | $0<\|x-x_0\|<\delta$时，$\|f(x)-a\|<\epsilon$ |
-| 左趋于$x_0$  | a      | $\epsilon>0$ | $\delta>0$ | $0<x-x_0<\delta$时，$\|f(x)-a\|<\epsilon$     |
-| 右趋于$x_0$  | a      | $\epsilon>0$ | $\delta>0$ | $0<x_0-x<\delta$时，$\|f(x)-a\|<\epsilon$     |
+| x趋于       | f(x)趋于 | 任给           | 存在         | 使得                                                         |
+|:---------:|:------:|:------------:|:----------:|:----------------------------------------------------------:|
+| $＋\infty$ | a      | $\epsilon>0$ | $X>0$      | $x>X$时，$\vert f(x)-a\vert <\epsilon$                       |
+| $-\infty$ | a      | $\epsilon>0$ | $X>0$      | $x<-X$时，$\vert f(x)-a\vert<\epsilon$                       |
+| $\infty$  | a      | $\epsilon>0$ | $X>0$      | $x>\vert X\vert$时，$\vert f(x)-a\vert <\epsilon$            |
+| $x_0$     | a      | $\epsilon>0$ | $\delta>0$ | $0<\vert x-x_0\vert<\delta$时，$\vert f(x)-a\vert <\epsilon$ |
+| 左趋于$x_0$  | a      | $\epsilon>0$ | $\delta>0$ | $0<x-x_0<\delta$时，$\vert f(x)-a\vert<\epsilon$             |
+| 右趋于$x_0$  | a      | $\epsilon>0$ | $\delta>0$ | $0<x_0-x<\delta$时，$\vert f(x)-a\vert<\epsilon$             |
 
 + **人话**：让$f(x)$缩入极限范围内之后，$x$也要同方向缩入极限范围内，且有$x$与之对应。
 
@@ -442,8 +442,8 @@ $$
 | 先加减后积分，先积分后加减 | \                                                               |
 | \             | $\int_a^af(x)dx=0$                                              |
 | 上下限颠倒取负数      | $\int_a^bf(x)dx=-\int_b^af(x)dx$                                |
-| 分段积分，再求和      | $\int_a^bf(x)dx=-\int_a^cf(x)dx+\int_c^bf(x)dx$                 |
-| 面积上正下负        | $\|\int_a^bf(x)dx\|≤\int_a^b\|f(x)\|dx$                         |
+| 分段积分，再求和      | $\int_a^bf(x)dx=\int_a^cf(x)dx+\int_c^bf(x)dx$                  |
+| 面积上正下负        | $\vert\int_a^bf(x)dx\vert ≤\int_a^b\vert f(x)\vert dx$          |
 | 介值性           | $[a,b]$区间$M$是最大值，$m$最小值，$m(b-a)<\int_a^bf(x)dx<M(b-a)$          |
 | 定积分中值定律       | $[a,b]$区间一定存在$x_0$，$\int_a^bf(x)dx＝f(x_0)(b-a)$                 |
 | 奇偶快算          | 奇函数$\int_{-a}^af(x)dx=0$，偶函数$\int_{-a}^af(x)dx=2\int_0^af(x)dx$ |
@@ -452,7 +452,7 @@ $$
 
 #### 牛顿莱布尼茨公式
 
-        **概念**：$F(x)$是$f(x)$的不定积分，则有$\int_a^bf(x)dx＝F(x)|_a^b＝F(b)-F(a)$
+        **概念**：$F(x)$是$f(x)$的不定积分，则有$\int_a^bf(x)dx＝F(x)\vert_a^b＝F(b)-F(a)$
 
 ---
 
@@ -472,10 +472,10 @@ $$
 
 #### 定积分法
 
-| 定积分法  | 内容                                                       |
-|:-----:|:--------------------------------------------------------:|
-| 换元积分法 | 大同不定积分，多限制$x$关于$t$，$t$关于$x$是单调函数，上下限还要带入$t$关于$x$的函数改变上下限 |
-| 分部积分法 | 一模一样，先把变换小的拿到$d$里面去，$\int_a^b UdV＝UV\|_a^b-\int_a^b VdU$ |
+| 定积分法  | 内容                                                           |
+|:-----:|:------------------------------------------------------------:|
+| 换元积分法 | 大同不定积分，多限制$x$关于$t$，$t$关于$x$是单调函数，上下限还要带入$t$关于$x$的函数改变上下限     |
+| 分部积分法 | 一模一样，先把变换小的拿到$d$里面去，$\int_a^b UdV＝UV\vert _a^b-\int_a^b VdU$ |
 
 ---
 
@@ -495,9 +495,9 @@ $$
         **概念**：若$f(x)$在**无限开区间**有定义且连续，则有
 
 $$
-\int_{a}^{＋\infty}f(x)dx＝F(x)|_{a}^{＋\infty}＝F(＋\infty)-F(a)\\
-\int_{-\infty}^{a}f(x)dx＝F(x)|_{-\infty}^{a}＝F(a)-F(-\infty)\\
-\int_{-\infty}^{＋\infty}f(x)dx＝F(x)|_{-\infty}^{＋\infty}＝F(＋\infty)-F(-\infty)\\
+\int_{a}^{＋\infty}f(x)dx＝F(x)\vert_{a}^{＋\infty}＝F(＋\infty)-F(a)\\
+\int_{-\infty}^{a}f(x)dx＝F(x)\vert_{-\infty}^{a}＝F(a)-F(-\infty)\\
+\int_{-\infty}^{＋\infty}f(x)dx＝F(x)\vert_{-\infty}^{＋\infty}＝F(＋\infty)-F(-\infty)\\
 $$
 
 | 术语  | 概念                  |
@@ -524,12 +524,12 @@ $$
 
 #### 绝对收敛与条件收敛
 
-| 收敛分类 | 概念                                                          |
-|:----:|:-----------------------------------------------------------:|
-| 绝对收敛 | $\int_a^{+\infty} f(x)dx$收敛，且$\int_a^{+\infty}\|f(x)\|dx$收敛 |
-| 条件收敛 | $\int_a^{+\infty} f(x)dx$收敛，但$\int_a^{+\infty}\|f(x)\|dx$发散 |
+| 收敛分类 | 概念                                                                  |
+|:----:|:-------------------------------------------------------------------:|
+| 绝对收敛 | $\int_a^{+\infty} f(x)dx$收敛，且$\int_a^{+\infty}\vert f(x)\vert dx$收敛 |
+| 条件收敛 | $\int_a^{+\infty} f(x)dx$收敛，但$\int_a^{+\infty}\vert f(x)\vert dx$发散 |
 
-+ $\int_a^{+\infty}|f(x)|dx$收敛，可单向推出$\int_a^{+\infty} f(x)dx$收敛
++ $\int_a^{+\infty}\vert f(x)\vert dx$收敛，可单向推出$\int_a^{+\infty} f(x)dx$收敛
 
 ---
 
