--- a/pages/M04概率论与数理统计.md
+++ b/pages/M04概率论与数理统计.md
@@ -1,4 +1,4 @@
-<h1 align="center">概率论和数理统计</h1>
+<h1 align="center">概率论与数理统计</h1>
 
 ## 概率基础
 
@@ -77,11 +77,11 @@
 
 ### 条件概率
 
-        **概念**：在$B$的样本空间下$A$发生的概率，记$P(A|B)$
+        **概念**：在$B$的样本空间下$A$发生的概率，记$P(A\vert B)$
 
-        **乘法公式**：$P(AB)=P(A)P(B|A)=P(B)P(A|B)$
+        **乘法公式**：$P(AB)=P(A)P(B\vert A)=P(B)P(A\vert B)$
 
-                            $P(ABC)=P(A)P(BC|A)=P(A)P(B|A)P(C|AB)$
+                            $P(ABC)=P(A)P(BC\vert A)=P(A)P(B\vert A)P(C\vert AB)$
 
                             助记：分子约分母，分子还能乘
 
@@ -89,13 +89,13 @@
 
         **全概率公式**：当$A_1、A_2...A_n$是完备事件组，则有:
 
-                                $P(B)＝P(B|A_1)＋P(B|A_2)＋...＋P(B|A_n)$
+                                $P(B)＝P(B\vert A_1)＋P(B\vert A_2)＋...＋P(B\vert A_n)$
 
 <br>
 
         **贝叶斯公式**：由果求因，当$A_1、A_2...A_n$是完备事件组，则有:
 
-                                $P(A_1|B)=\frac{P(A_1B)}{P(B)}=\frac{P(A_1B)}{P(B|A_1)＋P(B|A_2)＋...＋P(B|A_n)}$
+                                $P(A_1\vert B)=\frac{P(A_1B)}{P(B)}=\frac{P(A_1B)}{P(B\vert A_1)＋P(B\vert A_2)＋...＋P(B\vert A_n)}$
 
 <br>
 
@@ -182,7 +182,7 @@
 
 + 超几何分布式是不放回模型，如果N相对于n很大，放不放回对概率几乎没有影响，可看成放回模型的二项分布。
 
-+ 指数分布具有无记忆性，增长很快：$P\{X>b|X>a\}＝P\{X>b\}$
++ 指数分布具有无记忆性，增长很快：$P\{X>b\vert X>a\}＝P\{X>b\}$
 
 + $X$符合正太分布，间记$X-N(\mu,\sigma^2)$，$N(0,1)$是标准正太分布
 
@@ -200,7 +200,7 @@
 ## 一维随机变量条件分布
 
 $$
-F(x|X>a)＝P\{X≤x|X>a\}=\frac{P\{X≤x，X＞a\}}{P\{X>a\}}
+F(x\vert X>a)＝P\{X≤x\vert X>a\}=\frac{P\{X≤x，X＞a\}}{P\{X>a\}}
 $$
 
 ---
@@ -262,7 +262,7 @@ $$
 ### 离散型
 
 $$
-P(X＝x|Y＝y)＝\frac{P(X＝x,Y＝y)}{P(Y＝y)}＝\frac{联合概率}{边缘概率} 
+P(X＝x\vert Y＝y)＝\frac{P(X＝x,Y＝y)}{P(Y＝y)}＝\frac{联合概率}{边缘概率} 
 $$
 
 ---
@@ -272,7 +272,7 @@ $$
         **条件分布函数**： 
 
 $$
-F(x|y)=P(X≤x|Y=y)=\frac{P(X≤x，Y=y)}{P(Y=y)}\\
+F(x\vert y)=P(X≤x\vert Y=y)=\frac{P(X≤x，Y=y)}{P(Y=y)}\\
 =\lim(\epsilon\to0)
 \frac{\int_{-\infty}^{x}\int_{y}^{y+\epsilon}f(s,t)dsdt}
 {\int_{y}^{y+\epsilon}f_Y(v)dv}\\
@@ -285,16 +285,16 @@ F(x|y)=P(X≤x|Y=y)=\frac{P(X≤x，Y=y)}{P(Y=y)}\\
 $$
 
 $$
-同理：F(x|y)=\frac{\int_{-\infty}^{y}f(x,t)dt}{f_X(x)}
+同理：F(x\vert y)=\frac{\int_{-\infty}^{y}f(x,t)dt}{f_X(x)}
 $$
 
-+ 注意：理解$F(x|y)$的简写
++ 注意：理解$F(x\vert y)$的简写
 
        **条件密度函数**：
 
 $$
-f(x|y)=P(X=x|Y=y)=\frac{P(X=x,Y=y)}{P(Y=y)}=\frac{f(x,y)}{f_Y(y)}\\
-f(y|x)=P(Y=y|X=x)=\frac{P(X=x,Y=y)}{P(X=x)}=\frac{f(x,y)}{f_X(x)}
+f(x\vert y)=P(X=x\vert Y=y)=\frac{P(X=x,Y=y)}{P(Y=y)}=\frac{f(x,y)}{f_Y(y)}\\
+f(y\vert x)=P(Y=y\vert X=x)=\frac{P(X=x,Y=y)}{P(X=x)}=\frac{f(x,y)}{f_X(x)}
 $$
 
 <br>
@@ -302,7 +302,7 @@ $$
         **若独立，则有**
 
 $$
-f(x|y)＝f_X(x)＝\frac{f(x,y)}{f_Y(y)}\\
+f(x\vert y)＝f_X(x)＝\frac{f(x,y)}{f_Y(y)}\\
 得到f(x,y)=f_X(x)f_Y(y)
 $$
 
@@ -328,7 +328,7 @@ $$
 
 $$
 F(j)=P(J≤j)=P(X+Y≤j)=\iint_{D_j}f(x,y)dxdy\\
-D_j=\{(x,y)|x+y≤j\}直接坐标系X型积分\\
+D_j=\{(x,y)\vert x+y≤j\}直接坐标系X型积分\\
 =\int_{-\infty}^{+\infty}dx\int_{-\infty}^{j-x}f(x,y)dy\\
 换元t(变量)=x+y(变量)，dy=dt，y∈(-\infty,j-x),t∈(-\infty,j)\\
 =\int_{-\infty}^{+\infty}dx\int_{-\infty}^{j}f(x,t-x)dt\\
@@ -368,7 +368,7 @@ $$
 | 离散型二维随机变量函数分布 | $\sum(g(x,y)×对应概率)$                                           |
 | 连续型二维随机变量函数分布 | $\int _{-\infty}^{+\infty}\int_{-\infty}^{+\infty}g(x,y)dxdy$ |
 
-+ 条件期望：$\int_{-\infty}^{＋\infty}xf(x|y)dx$
++ 条件期望：$\int_{-\infty}^{＋\infty}xf(x\vert y)dx$
 
 | 性质                      |
 |:-----------------------:|
@@ -428,7 +428,7 @@ $$
 | 性质                                      |
 |:---------------------------------------:|
 | 与协方差同正、同负、同0                            |
-| $\|ρ\|≤1$                               |
+| $\vert ρ\vert≤1$                        |
 | $ρ＝1$完全正线性相关，$ρ＝-1$完全负线性相关，$ρ＝0$没任何线性关系 |
 | 独立一定$ρ＝0$，$ρ＝0$不一定独立                    |
 
