--- a/pages/M03微积分二.md
+++ b/pages/M03微积分二.md
@@ -95,15 +95,15 @@ $$
 
         **公式**：对$x$求偏导，直接套用导数基本公式，把其他**非$x$的变量都看成是常数**。
 
-| 四种表示法 | $f_x'(x_0,y_0)$ | $Z_x'\|_{x=x_0,y=y_0}$ | $\frac{\partial f(x_0,y_0)}{\partial x}$ | $\frac{\partial Z}{\partial x}\|_{x=x_0,y=y_0}$ |
-|:-----:|:---------------:|:----------------------:|:----------------------------------------:|:-----------------------------------------------:|
+| 四种表示法 | $f_x'(x_0,y_0)$ | $Z_x'\vert _{x=x_0,y=y_0}$ | $\frac{\partial f(x_0,y_0)}{\partial x}$ | $\frac{\partial Z}{\partial x}\vert _{x=x_0,y=y_0}$ |
+|:-----:|:---------------:|:--------------------------:|:----------------------------------------:|:---------------------------------------------------:|
 
 ---
 
 ### 高阶偏导
 
-| 高阶偏导表示 | $f_{xx}''(x_0,y_0)$ | $Z_{xx}''\|_{x=x_0,y=y_0}$ | $\frac{\partial ^2f(x_0,y_0)}{\partial x^2}$ | $\frac{\partial^2 Z}{\partial x^2}\|_{x=x_0,y=y_0}$ |
-| ------ | ------------------- | -------------------------- | -------------------------------------------- | --------------------------------------------------- |
+| 高阶偏导表示 | $f_{xx}''(x_0,y_0)$ | $Z_{xx}''\vert_{x=x_0,y=y_0}$ | $\frac{\partial ^2f(x_0,y_0)}{\partial x^2}$ | $\frac{\partial^2 Z}{\partial x^2}\vert_{x=x_0,y=y_0}$ |
+| ------ | ------------------- | ----------------------------- | -------------------------------------------- | ------------------------------------------------------ |
 
 + **混合高阶偏导**：$Z_{xy}$，$Z_{yx}$，当连续时：$Z_{xy}''=Z_{yx}''$
 
@@ -197,20 +197,20 @@ $$
 
 $$
 J(r,\theta)=
-\left|
+\left \vert
 \begin{array}{cccc} 
 \frac{\partial x}{\partial r}  &  \frac{\partial x}{\partial \theta}\\
 \\
 \frac{\partial y}{\partial r}  &  \frac{\partial y}{\partial \theta}\\ 
 \end{array}
-\right|=
-\left|
+\right\vert=
+\left \vert
 \begin{array}{cccc} 
 \cos\theta  &  -r\sin\theta\\
 \\
 \sin\theta  &  r\cos\theta\\ 
 \end{array}
-\right|=r\cos^2\theta+r\sin^2\theta=r
+\right\vert=r\cos^2\theta+r\sin^2\theta=r
 $$
 
 3. $D$**对应为**：$r^2=4，即半径为2的圆$
@@ -236,20 +236,20 @@ $$
    
    $$
    J(x,y)=
-\left|
+\left\vert
 \begin{array}{cccc} 
 \frac{\partial u}{\partial x}  &  \frac{\partial u}{\partial y}\\
 \\
 \frac{\partial v}{\partial x}  &  \frac{\partial v}{\partial y}\\ 
 \end{array}
-\right|=
-\left|
+\right\vert=
+\left\vert
 \begin{array}{cccc} 
 1  &  0\\
 \\
 0  &  1\\ 
 \end{array}
-\right|=1
+\right\vert=1
    $$
 
 3. $D$**对应为**：$u^2+v^2=4$
@@ -268,20 +268,20 @@ $$
    
    $$
    J(r,\theta)=
-\left|
+\left\vert
 \begin{array}{cccc} 
 \frac{\partial x}{\partial r}  &  \frac{\partial x}{\partial \theta}\\
 \\
 \frac{\partial y}{\partial r}  &  \frac{\partial y}{\partial \theta}\\ 
 \end{array}
-\right|=
-\left|
+\right\vert=
+\left\vert
 \begin{array}{cccc} 
 a\cos\theta  &  -ar\sin\theta\\
 \\
 b\sin\theta  &  br\cos\theta\\ 
 \end{array}
-\right|=abr
+\right\vert=abr
    $$
 
 3. $D$**对应为**：$r^2=1，即半径为1的圆$
@@ -307,14 +307,14 @@ b\sin\theta  &  br\cos\theta\\
 
 ## 无穷级数
 
-| 级数      | 概念                                     | 收敛                                                                  | 发散                                             |
-|:-------:|:--------------------------------------:|:-------------------------------------------------------------------:|:----------------------------------------------:|
-| 等比级数    | \                                      | $\|q\|<1$时$\lim_{n\to\infty}\frac{a_1(1-q^n)}{1-q}=\frac{a_1}{1-q}$ | $\|q\|>1$                                      |
-| 裂项相消    | $\sum_{n=1}^\infty\frac{1}{n(n+1)}$    | $\lim_{n\to\infty}1-\frac{1}{n+1}=1$                                | \                                              |
-| $\ln$相消 | $\sum_{n=1}^\infty\ln\frac{n+1}n$      | \                                                                   | $\lim_{n\to\infty}n+1=\infty$                  |
-| 调和级数    | $\sum_{n=1}^\infty\frac{1}{n}$         | \                                                                   | $≥\lim_{n\to\infty}\int_1^{+\infty}\frac 1xdx$ |
-| P级数     | $\sum_{n=1}^\infty\frac{1}{n^p}$       | $p>1$                                                               | $p<1$                                          |
-| 交错P级数   | $\sum_{n=1}^\infty(-1)^n\frac{1}{n^p}$ | $p≥1$，绝对收敛；<br>$p<1$，条件收敛                                           | \                                              |
+| 级数      | 概念                                     | 收敛                                                                         | 发散                                             |
+|:-------:|:--------------------------------------:|:--------------------------------------------------------------------------:|:----------------------------------------------:|
+| 等比级数    | \                                      | $\vert q\vert<1$时$\lim_{n\to\infty}\frac{a_1(1-q^n)}{1-q}=\frac{a_1}{1-q}$ | $\vert q\vert>1$                               |
+| 裂项相消    | $\sum_{n=1}^\infty\frac{1}{n(n+1)}$    | $\lim_{n\to\infty}1-\frac{1}{n+1}=1$                                       | \                                              |
+| $\ln$相消 | $\sum_{n=1}^\infty\ln\frac{n+1}n$      | \                                                                          | $\lim_{n\to\infty}n+1=\infty$                  |
+| 调和级数    | $\sum_{n=1}^\infty\frac{1}{n}$         | \                                                                          | $≥\lim_{n\to\infty}\int_1^{+\infty}\frac 1xdx$ |
+| P级数     | $\sum_{n=1}^\infty\frac{1}{n^p}$       | $p>1$                                                                      | $p<1$                                          |
+| 交错P级数   | $\sum_{n=1}^\infty(-1)^n\frac{1}{n^p}$ | $p≥1$，绝对收敛；<br>$p<1$，条件收敛                                                  | \                                              |
 
 + $\ln$公式：$\ln a-\ln b=\ln\frac ab，\ln a+\ln b=\ln ab$
 
@@ -371,14 +371,14 @@ b\sin\theta  &  br\cos\theta\\
         **判别方法**：全部取绝对值，然后用比值判别法
 
 $$
-\lim_{n\to\infty}|\frac{u_{n+1}}{u_n}|
-=\lim_{n\to\infty}|\frac{a_{n+1}}{a_n}x|=L\\
+\lim_{n\to\infty}\vert\frac{u_{n+1}}{u_n}\vert
+=\lim_{n\to\infty}\vert\frac{a_{n+1}}{a_n}x\vert=L\\
 因为L<1收敛，有如下情况：\\
-①若|\frac{a_{n+1}}{a_n}|=0，
+①若\vert\frac{a_{n+1}}{a_n}\vert=0，
 x∈(-\infty,+\infty)，x收敛半径+\infty\\
-②若|\frac{a_{n+1}}{a_n}|=Q∈(0，+\infty)，
+②若\vert\frac{a_{n+1}}{a_n}\vert=Q∈(0，+\infty)，
 x∈(-\frac{1}{Q},\frac{1}{Q}),x收敛半径\frac{1}{Q}\\
-③若|\frac{a_{n+1}}{a_n}|=+\infty，
+③若\vert\frac{a_{n+1}}{a_n}\vert=+\infty，
 x=0，x收敛半径0\\
 最后，单独判断L=1的情况
 $$
