图片引入改用html标签，图片统一放一起

--- a/pages/C03操作系统.md
+++ b/pages/C03操作系统.md
@@ -135,7 +135,7 @@
 
         **状态切换**
 
-![](C:\Users\Administrator\AppData\Roaming\marktext\images\2023-07-22-12-47-46-image.png)
+<img src="./images/2023-07-22-12-47-46-image.png">
 
         状态切换通过不可中断的原语控制：
 
@@ -604,7 +604,7 @@
 
 + **超级块**：占用一个物理块，记录信息：**地址个数、地址**，首地址是下个超级块。末尾超级块首地址用特殊值置空，非首地址是一个个的空闲物理块。
 
-![](C:\Users\Administrator\AppData\Roaming\marktext\images\2023-07-23-11-15-42-image.png)
+<img src="./images/2023-07-23-11-15-42-image.png">
 
 ---
 
