--- a/pages/C04计算机网络.md
+++ b/pages/C04计算机网络.md
@@ -704,7 +704,7 @@
    
    $seq＝u＋1$，$ACK＝1$
    
-   ![](C:\Users\Administrator\Desktop\20210609111930172.png)
+   <img src="./images/2023-08-01-13-12-image.png">
 
 ---
 
