增加网页运动

--- a/pages/M03微积分二.md
+++ b/pages/M03微积分二.md
@@ -400,8 +400,7 @@ $$
 f(x)=\frac{a_0}{2}+\sum_{n=1}^{\infty}
 (a_n\cos\frac{n\pi x}l+b_n\sin\frac{n\pi x}l)\\
 a_n=\frac1l\int_{-l}^lf(x)\cos\frac{n\pi x}ldx（n=1,2,3...）\\
-b_n=\frac1l\int_{-l}^lf(x)\sin\frac{n\pi x}ldx（n=1,2,3...）\\
-
+b_n=\frac1l\int_{-l}^lf(x)\sin\frac{n\pi x}ldx（n=1,2,3...）
 $$
 
 若$f(x)$为偶函数，则系数为：
