增加笔记，修正笔记

--- a/pages/C01数据结构.md
+++ b/pages/C01数据结构.md
@@ -702,13 +702,13 @@ int KMP(string S,string T){
 
 #### 特殊二叉树
 
-| 特殊二叉树 | 概念                   | 性质          |
-|:-----:|:--------------------:|:-----------:|
-| 满二叉树  | 不存在度为1的点             | 性质1、性质2、性质3 |
-| 完全二叉树 | 满二叉树放宽条件，可少最后父结点的右孩子 | 性质1、性质2     |
-| 二叉排序树 | 左结点<根结点<右结点          | 方便查找，性质4    |
-| 平衡二叉树 | 深度差≤1                | 提高查找效率      |
-| 绝对平衡树 | 深度差=0                | 提高查找效率      |
+| 特殊二叉树 | 概念                                         | 性质          |
+|:-----:|:------------------------------------------:|:-----------:|
+| 满二叉树  | 不存在度为1的点，（是绝对平衡树从最后叶子结点开始成双少结点，国内要加入这一条限制） | 性质1、性质2、性质3 |
+| 完全二叉树 | 满二叉树放宽条件，可少最后父结点的右孩子                       | 性质1、性质2     |
+| 二叉排序树 | 左结点<根结点<右结点                                | 方便查找，性质4    |
+| 平衡二叉树 | 深度差≤1                                      | 提高查找效率      |
+| 绝对平衡树 | 深度差=0                                      | 提高查找效率      |
 
         **性质1**：满二叉树存储在一维数组，即顺序存储时，若某父结点下标为`i`，则其左孩子下标为`2i+1`，右孩子下标为`2i+2`。
 
@@ -930,6 +930,8 @@ struct TNode{
 | 是否全部连通 | 强连通图、连通图、非连通图 |
 | 边是否有值  | 带权图、非带权图      |
 | 边的相对数量 | 完全图、稀疏图、稠密图   |
+
++ 任何情况下都连通，即变动任意边都连通，$n$个顶点需要$n-1$个顶点强连通，再接入最后一个顶点，既需要边数为：$ (n-2+n-3+...+1)+1 $
 
 ---
 
