--- a/pages/C02计算机组成原理.md
+++ b/pages/C02计算机组成原理.md
@@ -1,5 +1,7 @@
 <h1 align="center">计算机组成原理</h1>
 
+<div align="right">最近更新时间：2023-08-07</div>
+
 ## 计算机发展与结构
 
 + 计算机分**硬件**和**软件**，软件又分**系统软件**和**应用软件**
@@ -494,8 +496,6 @@
 
         **指令构成**：操作码|地址码
 
-        指令和数据**无差别存储**到存储器。
-
 | 依据          | 分类                      |
 |:-----------:|:-----------------------:|
 | 所有指令的长度是否统一 | 定长指令、变长指令               |
@@ -504,6 +504,11 @@
         **扩展操作码**：在定长指令下，操作码和地址码的分界线可变。一般把定长指令划分位n层模块，以可使用的模块数划分操作码和地址码，每个模块的可用操作数个数不一定会全用，会留给下一个模块。因此有以下公式：
 
         $第n层操作码个数＝上层留下可用个数×本层可用个数$
+
+| 术语        | 说明                                                                                 |
+|:---------:|:----------------------------------------------------------------------------------:|
+| **无差别存储** | 指令和数据**无差别存储**到存储器。CPU能区分取它们的依据是处于不同的**指令周期**，取址周期取的地址，访存周期取的是数据。                  |
+| **机器字长**  | CPU一次取的数据位数，因此CPU一次不止取一个地址，是根据机器字长决定的，常见的有32位字长计算机，64位字长计算机，若按字节编制，分别一次取4个地址，8个地址。 |
 
 #### 指令寻址
 
@@ -533,7 +538,7 @@
 | 相对寻址      | $TD=(A+<PC>)$        | 1   | 偏移寻址 |
 | 堆栈寻址      | 寄存器实现叫硬堆栈、主存实现叫软堆栈   | /   | 堆栈寻址 |
 
-注：$TD$目标数据，$A$形式地址，$()$访问主存，$<>$访问寄存器，$BR$基址寄存器（提供给操作系统），$IX$变址寄存器（提供给用户编程，以减少访存），$PC$程序计数器寄存器。
++ $TD$目标数据，$A$形式地址，$()$访问主存，$<>$访问寄存器，$BR$基址寄存器（提供给操作系统），$IX$变址寄存器（提供给用户编程，以减少访存），$PC$程序计数器寄存器。
 
 ---
 
@@ -700,13 +705,15 @@
 
 ### 编址与对齐
 
-| 术语    | 说明                    |
-|:-----:|:---------------------:|
-| 按字节编制 | 1个地址共8b               |
-| 按字编制  | 1个地址共32b/64b          |
-| 大端模式  | 符合人类阅读习惯的信息排序         |
-| 小端模式  | 以地址位单位，将人类阅读习惯的信息序列倒序 |
-| 边界对齐  | 将所有数据类型的数据放在能一次读写的位置  |
+| 术语    | 说明                      |
+|:-----:|:-----------------------:|
+| 按字节编制 | 1个地址共8b                 |
+| 按字编制  | 1个地址共32b/64b            |
+| 大端模式  | 符合人类阅读习惯的信息排序           |
+| 小端模式  | 以地址位单位，将人类阅读习惯的信息序列倒序   |
+| 边界对齐  | 将所有数据类型的数据放在CPU能一次读写的位置 |
+
++ CPU能一次读写的位数叫**机器字长**
 
 ---
 
