--- a/pages/C03操作系统.md
+++ b/pages/C03操作系统.md
@@ -1,5 +1,7 @@
 <h1 align="center">操作系统</h1>
 
+<div align="right">最近更新时间：2023-08-07</div>
+
 ## 操作系统特征与发展
 
         **概念**：
@@ -411,7 +413,7 @@
 
 1. 逻辑地址拆分：**单级页号|页内偏移量**
 
-2. 越界判断：使用页表寄存器的页表长度，$页号≤页表长度$
+2. 页号越界判断：使用页表寄存器的页表长度，$页号≤页表长度$
 
 3. 查询页表：使用页表寄存器的页表始址，偏移
    
@@ -427,7 +429,7 @@
 
 1. 逻辑地址拆分：**一级页号|二级页号|页内偏移量**
 
-2. 越界判断：$每级页号≤log_2(页面大小÷页表项大小)$
+2. 页号越界判断（一次性全部）：$每级页号≤log_2(页面大小÷页表项大小)$
 
 3. 查询一级页表：使用页表寄存器的一级页表始址，偏移
    
@@ -463,13 +465,15 @@
 
 1. 逻辑地址拆分：**段号|段内偏移量**
 
-2. 越界判断：使用段表寄存器的段表长度，$段号≤段表长度$
+2. 段号越界判断：使用段表寄存器的段表长度，$段号≤段表长度$
 
-3. 查询页表：使用段表寄存器的段表始址，偏移
+3. 查询段表：使用段表寄存器的段表始址，偏移
    
-   $段号×段表项大小÷存储字长$，找到对应的段基址
+   $段号×段表项大小÷存储字长$，找到对应的段基址、段长
 
-4. 具体地址：**段基址|段内偏移量**
+4. 段长越界判断：使用查询的段长，$段内偏移量≤段长$
+
+5. 具体地址：**段基址|段内偏移量**
 
 ---
 
@@ -479,17 +483,19 @@
 
 1. 逻辑地址拆分：**段号|页号|段内偏移量**
 
-2. 越界判断：使用段表寄存器的段表长度，$段号≤段表长度$
+2. 段号越界判断：使用段表寄存器的段表长度，$段号≤段表长度$
 
 3. 查询段表：使用段表寄存器的段表始址，偏移
    
-   $段号×段表项大小÷存储字长$，找到对应的页表始址
+   $段号×段表项大小÷存储字长$，找到对应的页表始址、页表长度
 
-4. 查询页表：使用页表始址，偏移
+4. 页号越界判断：使用查询的页表长度，$页号≤页表长度$
+
+5. 查询页表：使用页表始址，偏移
    
    $页号×页表项大小÷存储字长$，找到对应内存块号
 
-5. 具体地址：**内存块号|段内偏移量**
+6. 具体地址：**内存块号|段内偏移量**
 
 ---
 
@@ -619,9 +625,9 @@
 | 保护    | 口令保护、加密保护、访问控制      |
 | 其他功能  | write、creat、delete  |
 
-+ **软链接**：访问文件路径，打开目标文件
++ **软链接**：直接复制文件引用计数器，引用计数器在建立时被固定，无实际意义。删除被链接文件时，对软链接不可见，只有在再次使用软链接时，发现链接的目标文件不存在时会自动删除。
 
-+ **硬链接**：直接打开目标文件
++ **硬链接**：引用计数器是动态的，建立时文件引用计数器加1，删除文件时引用计数器减1，只有当引用计数器为0时，文件才在磁盘中彻底被删除。
 
 + **口令保护**：存储在本地，安全性差，速度快
 
@@ -643,10 +649,12 @@ $总用时=启动(延迟)时间+寻道(移动)时间+寻区(旋转)时间+传输
 |:------------:|:---------------------:|:---------:|
 | 先来先服务算法FCFS  | 先来先服务                 | 唯一不产生磁臂黏着 |
 | 最短寻找时间优先SSTF | 最近磁道优先                | 会饥饿       |
-| 扫描算法SCAN     | 移动到道边，换方向，来→回→来→回     | \         |
+| 扫描算法SCAN     | 移动到道边，换方向，共两个方向       | \         |
 | LOOK调度算法     | 优化扫描，观察到道边是否还有，提起换向   | \         |
-| 循环扫描算法CSCAN  | 移动到道边，从头再来，来→来        | \         |
+| 循环扫描算法CSCAN  | 移动到道边，从头再来，只有一个方向     | \         |
 | C-LOOK调度算法   | 优化扫描，观察到道边是否还有，提起从头再来 | \         |
+
++ 只有一个方向的CSCAN不仅能更加**契合按序读取**，同时使每个磁道被访问的**时间间隔相同**。
 
 | 减少延迟方法          | 说明               |
 |:---------------:|:----------------:|
