--- a/pages/C04计算机网络.md
+++ b/pages/C04计算机网络.md
@@ -1,5 +1,7 @@
 <h1 align="center">计算机网络</h1>
 
+<div align="right">最近更新时间：2023-08-07</div>
+
 ## 计算机网络概念
 
         **计算机网络概念**：分散的具有独立功能的计算机系统，通过**通信设备**与**线路**连接起来，由功能完善的软件实现**资源共享**和**信息传递**的系统，是**互连互通的**、**自治的**计算机集合。
@@ -708,14 +710,28 @@
 
 ---
 
-#### TCP特性详情
+#### TCP拥塞控制
 
-| TCP特性     | 说明                            |
-|:---------:|:-----------------------------:|
-| 流量控制      | 拥有链路层窗口协议的超时重传、回复确认、累计确认      |
-| 快速重传、冗余确认 | 收到**3个重复确认**，则认为该期待报文段丢失，马上重传 |
-| 窗口查询      | 当发送方窗口设置计算为0时，定期主动询问是否有窗口     |
-| 拥塞控制      | 慢开始（从0开始），快恢复（拥塞后设为一半，从一半开始）  |
+| 特性             | 说明                            |
+|:--------------:|:-----------------------------:|
+| 回复确认、累计确认、超时重传 | 同链路层窗口协议                      |
+| 快速重传           | 收到**3个重复确认**，则认为该期待报文段丢失，马上重传 |
+| 窗口查询           | 当发送方窗口设置计算为0时，定期主动询问是否有窗口     |
+
+| 时机   | 采用算法 | 算法含义：调整的窗口值      |
+|:----:|:----:|:----------------:|
+| 刚开始  | 慢开始  | 1                |
+| 超时重传 | 慢开始  | 1                |
+| 快速重传 | 快恢复  | 重复时窗口数的一半，即慢开始门限 |
+
+| 两个增长阶段 | 采用算法 | 算法含义：窗口的增长率 |
+|:------:|:----:|:-----------:|
+| ＜慢开始门限 | 网络试探 | ×2          |
+| ≥慢开始门限 | 拥塞避免 | +1          |
+
++ 慢开始门限初始值16，后续动态调整。调整时机触发超时重传、快速重传。调整值为其窗口的一半。
+
+<img src="./images/2023-08-07-19-53-image.png">
 
 ---
 
