--- a/pages/M01线性代数.md
+++ b/pages/M01线性代数.md
@@ -1,5 +1,7 @@
 <h1 align="center">线性代数</h1>
 
+<div align="right">最近更新时间：2023-08-07</div>
+
 ## 行列式
 
         **概念**：行数列数必须相等，**一个行列式可以求出一个值**，行列式表示时用$\vert a\vert$包裹其内部元素，来源于克拉姆法则的方程求解。
