--- a/pages/C01数据结构.md
+++ b/pages/C01数据结构.md
@@ -1,5 +1,7 @@
 <h1 align="center">数据结构</h1>
 
+<div align="right">最近更新时间：2023-08-07</div>
+
 ## 数据结构三要素
 
 | 三要素  | 内容                  |
@@ -702,17 +704,17 @@ int KMP(string S,string T){
 
 #### 特殊二叉树
 
-| 特殊二叉树 | 概念                                         | 性质          |
-|:-----:|:------------------------------------------:|:-----------:|
-| 满二叉树  | 不存在度为1的点，（是绝对平衡树从最后叶子结点开始成双少结点，国内要加入这一条限制） | 性质1、性质2、性质3 |
-| 完全二叉树 | 满二叉树放宽条件，可少最后父结点的右孩子                       | 性质1、性质2     |
-| 二叉排序树 | 左结点<根结点<右结点                                | 方便查找，性质4    |
-| 平衡二叉树 | 深度差≤1                                      | 提高查找效率      |
-| 绝对平衡树 | 深度差=0                                      | 提高查找效率      |
+| 特殊二叉树 | 概念                    | 性质          |
+|:-----:|:---------------------:|:-----------:|
+| 满二叉树  | 同绝对平衡树（国外定义是不存在度为1的点） | 性质1、性质2、性质3 |
+| 完全二叉树 | 满二叉树放宽条件，最后一行可从右往左少结点 | 性质1、性质2     |
+| 二叉排序树 | 左结点<根结点<右结点           | 方便查找，性质4    |
+| 平衡二叉树 | 深度差≤1                 | 提高查找效率      |
+| 绝对平衡树 | 深度差=0                 | 提高查找效率      |
 
-        **性质1**：满二叉树存储在一维数组，即顺序存储时，若某父结点下标为`i`，则其左孩子下标为`2i+1`，右孩子下标为`2i+2`。
+        **性质1**：满二叉树、完全二叉树存储在一维数组，即顺序存储时，若某父结点下标为`i`，则其左孩子下标为`2i+1`，右孩子下标为`2i+2`。
 
-        **性质2**：满二叉树存储在一维数组，即顺序存储时，最后一个父结点的下标为`ceil(n/2)-1`。
+        **性质2**：满二叉树、完全二叉树存储在一维数组，即顺序存储时，最后一个父结点的下标为`floor(n/2)-1`。
 
         **性质3**：满二叉树的$n$为奇数。
 
